--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-11.30MB/s(Youtube:不良林), server: 116.129.254.177, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇯🇵 日本-13.33MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-280.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.90MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-7.61MB/s(Youtube:不良林), server: 111.45.22.136, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇨🇳 中国-3.09MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
-  - {name: 🇭🇰 香港-5.04MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.90MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-557.5KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-596.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.55MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-11.30MB/s(Youtube:不良林)
-      - 🇯🇵 日本-13.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-280.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.61MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.09MB/s(Youtube:不良林)
-      - 🇭🇰 香港-5.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
       - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.55MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
