--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.28MB/s(Youtube:不良林), server: 38.68.135.18, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇨🇳 中国-1.75MB/s(Youtube:不良林), server: in-jp-1.iivvppnn.info, port: 38301, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-jp-1.iivvppnn.info}}
-  - {name: 🇨🇳 中国-4.72MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-1.19MB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65076, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 波兰-1.23MB/s(Youtube:不良林), server: 217.30.10.67, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林), server: 185.167.116.250, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-2.12MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇨🇳 中国-8.53MB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-635.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-1.92MB/s(Youtube:不良林), server: 116.129.254.177, port: 65096, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-596.1KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-179.4KB/s(Youtube:不良林), server: 111.45.22.136, port: 65062, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
   - {name: 🇺🇸 美国-4.34MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.59MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.75MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.19MB/s(Youtube:不良林)
-      - 波兰-1.23MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活7天)香港-4.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-635.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.92MB/s(Youtube:不良林)
-      - 🇨🇳 中国-596.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-179.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.34MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.59MB/s(Youtube:不良林)
 rules:
